apps/home-automation/home-assistant/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: home-assistant
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-dns"
spec:
  ingressClassName: nginx
  tls:
    - hosts: ["homeassistant.support4u.se"]
      secretName: home-assistant-tls
  rules:
    - host: homeassistant.support4u.se
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: home-assistant
                port:
                  number: 80
